# xense-taccap-lerobot

./: .gitignore  .gitmodules  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  conda_environment.yaml  install_hardware.sh  pyproject.toml  setup_env.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml
docs/source/: cli_commands.mdx
examples/: bi_elite_cs66_rt_check_tcp.py  bi_elite_cs66_rt_freedrive_probe.py  bi_elite_cs66_rt_world_axis_test.py  bi_elite_cs66_rt_world_frame_check.py  elite_cs66_rt_spacemouse_dryrun.py  elite_cs66_spacemouse_dryrun.py
examples/_fake_elite_cs_sdk/: external_control.script
recipes/: README.md
recipes/bi_flexiv_rizon4_rt/: assemble_box.yaml
recipes/record/bi_elite_cs66_rt/: test.yaml
recipes/record/bi_flexiv_rizon4_rt/: assemble_box.yaml
recipes/teleop/bi_elite_cs66_rt/: diagonal.yaml
recipes/teleop/bi_flexiv_rizon4_rt/: forward.yaml
src/lerobot/: __init__.py
src/lerobot/cameras/: utils.py
src/lerobot/cameras/insight9/: __init__.py  camera_insight9.py  configuration_insight9.py
src/lerobot/cameras/opencv/: camera_opencv.py  configuration_opencv.py
src/lerobot/cameras/xense/: README.md  __init__.py  camera_xense.py  configuration_xense.py  example1.py  example2.py  example_all_function.py
src/lerobot/datasets/: card_template.md  lerobot_dataset.py  video_utils.py
src/lerobot/motors/dynamixel/: dynamixel.py
src/lerobot/rl/: eval_policy.py  gym_manipulator.py
src/lerobot/robots/: __init__.py  robot.py  utils.py
src/lerobot/robots/arx5_follower/: __init__.py  arx5_follower.py  config_arx5_follower.py
src/lerobot/robots/bi_arx5/: bi_arx5.py  config_bi_arx5.py
src/lerobot/robots/bi_arx5/ARX5_SDK/: CMakeLists.txt  build_python.sh  pyproject.toml  setup.py
src/lerobot/robots/bi_arx5/ARX5_SDK/conda_environments/: py312_environment.yaml
src/lerobot/robots/bi_arx5/ARX5_SDK/pyarx/: __init__.py
src/lerobot/robots/bi_arx5/ARX5_SDK/python/: CMakeLists.txt  arx5_pybind.cpp
src/lerobot/robots/bi_elite_cs66_rt/: __init__.py  bi_elite_cs66_rt.py  config_bi_elite_cs66_rt.py
src/lerobot/robots/bi_flexiv_rizon4_rt/: __init__.py  bi_flexiv_rizon4_rt.py  config_bi_flexiv_rizon4_rt.py  config_serial_gripper.py  serial_gripper.py
src/lerobot/robots/bi_taccap_gripper/: README.md  __init__.py  bi_taccap_gripper.py  config_bi_taccap_gripper.py
src/lerobot/robots/bi_xense_flare_grippers/: bi_xense_flare_grippers.py  config_bi_xense_flare_grippers.py
src/lerobot/robots/elite_cs66/: __init__.py  config_elite_cs66.py  elite_cs66.py
src/lerobot/robots/elite_cs66_rt/: __init__.py  config_elite_cs66_rt.py  elite_cs66_rt.py
src/lerobot/robots/elite_cs66_rt/resource/: output_recipe.txt
src/lerobot/robots/flexiv_rizon4/: __init__.py  config_flexiv_rizon4.py  flare_gripper.py  flexiv_rizon4.py  xense_gripper.py
src/lerobot/robots/flexiv_rizon4/example_py/: spacemouse_teleop.py
src/lerobot/robots/flexiv_rizon4_rt/: __init__.py  config_flexiv_rizon4_rt.py  flare_gripper.py  flexiv_rizon4_rt.py  xense_gripper.py
src/lerobot/robots/grippers/: __init__.py  config_xense_gripper.py  serial_gripper.py  xense_gripper.py
src/lerobot/robots/pylibfranka_research3/: config_pylibfranka_research3.py  config_xense_gripper.py  pylibfranka_research3.py  xense_gripper.py
src/lerobot/robots/taccap_gripper/: README.md  __init__.py  calibrate_gripper_range.py  calibrate_tracker.py  config_taccap_gripper.py  serial_discovery.py  taccap_gripper.py  taccap_gripper_example.py  visualization.py
src/lerobot/robots/teleoperators/: utils.py
src/lerobot/robots/teleoperators/bi_trlc/: bi_trlc.py
src/lerobot/robots/teleoperators/mock_teleop/: teleop_mock.py
src/lerobot/robots/teleoperators/pico4/: config_pico4.py
src/lerobot/robots/teleoperators/spacemouse/: teleop_spacemouse.py
src/lerobot/robots/teleoperators/spacemouse/shared_memory/: shared_memory_ring_buffer.py  shared_ndarray.py
src/lerobot/robots/unitree_g1/: unitree_g1.py
src/lerobot/robots/xense_multisensor/: config_xense_multisensor.py  xense_multisensor.py
src/lerobot/scripts/: client_commands.md  lerobot_calibrate.py  lerobot_check_dataset.py  lerobot_find_joint_limits.py  lerobot_record.py  lerobot_replay.py  lerobot_setup_motors.py  lerobot_teleoperate.py  push_dataset_to_hub.py
src/lerobot/teleoperators/: teleoperator.py  utils.py
src/lerobot/teleoperators/bi_pico4/: bi_pico4.py  config_bi_pico4.py
src/lerobot/teleoperators/bi_trlc/: configuration_bi_trlc.py
src/lerobot/teleoperators/gamepad/: teleop_gamepad.py
src/lerobot/teleoperators/keyboard/: teleop_keyboard.py
src/lerobot/teleoperators/mock_teleop/: __init__.py  config_mock_teleop.py  teleop_mock.py
src/lerobot/teleoperators/pico4/: __init__.py  teleop_pico4.py  tracker.py
src/lerobot/teleoperators/spacemouse/: __init__.py  config_spacemouse.py  teleop_spacemouse.py
src/lerobot/teleoperators/spacemouse/peripherals/: keystroke_counter.py
src/lerobot/teleoperators/spacemouse/shared_memory/: __init__.py  shared_memory_queue.py  shared_memory_util.py
src/lerobot/teleoperators/trlc_leader/: trlc_leader.py
src/lerobot/teleoperators/vive_tracker/: config_vive_tracker.py  teleop_vive_tracker.py
src/lerobot/utils/: control_utils.py  import_utils.py  robot_utils.py  utils.py  visualization_utils.py
tests/datasets/: test_datasets.py
tests/mocks/: mock_robot.py
tests/utils/: test_visualization_utils.py
