# Copyright 2024 The HuggingFace Inc. team. All rights reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
homepage = "https://huggingface.co/lerobot"
documentation = "https://huggingface.co/docs/lerobot/index"
source = "https://github.com/huggingface/lerobot"
issues = "https://github.com/huggingface/lerobot/issues"
discord = "https://discord.gg/s3KuuzsPFb"

[project]
name = "lerobot"
version = "0.5.1"
description = "🤗 LeRobot (xense fork, no-ML build): datasets / record / replay / teleoperate with vendor hardware"
dynamic = ["readme"]
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [
    { name = "Rémi Cadène", email = "re.cadene@gmail.com" },
    { name = "Simon Alibert", email = "alibert.sim@gmail.com" },
    { name = "Alexander Soare", email = "alexander.soare159@gmail.com" },
    { name = "Quentin Gallouédec", email = "quentin.gallouedec@ec-lyon.fr" },
    { name = "Steven Palma", email = "imstevenpmwork@ieee.org" },
    { name = "Pepijn Kooijmans", email = "pepijnkooijmans@outlook.com" },
    { name = "Michel Aractingi", email = "michel.aractingi@gmail.com" },
    { name = "Adil Zouitine", email = "adilzouitinegm@gmail.com" },
    { name = "Dana Aubakirova", email = "danaaubakirova17@gmail.com" },
    { name = "Caroline Pascal", email = "caroline8.pascal@gmail.com" },
    { name = "Martino Russi", email = "nopyeps@gmail.com" },
    { name = "Thomas Wolf", email = "thomaswolfcontact@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = [
    "lerobot",
    "huggingface",
    "robotics",
    "machine learning",
    "artificial intelligence",
]

dependencies = [
    # Hugging Face dependencies (kept: datasets + hub for dataset IO)
    "datasets>=4.0.0,<5.0.0",
    "huggingface-hub>=1.0.0,<2.0.0",

    # Core dependencies
    "numpy>=1.26.4",          # robostack resolves to 1.26; pip-only installs can use 2.x (tested with 2.2.6)
    "cmake>=3.29.0.1,<4.2.0",
    "packaging>=24.2",

    "torch>=2.2.1,<2.11.0",
    "torchcodec>=0.2.1,<0.11.0; sys_platform != 'win32' and (sys_platform != 'linux' or (platform_machine != 'aarch64' and platform_machine != 'arm64' and platform_machine != 'armv7l')) and (sys_platform != 'darwin' or platform_machine != 'x86_64')",
    "torchvision>=0.21.0,<0.26.0",

    "einops>=0.8.0,<0.9.0",
    "opencv-python-headless==4.12.0.88",
    "opencv-python==4.12.0.88",
    "av>=15.0.0,<16.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "pyserial>=3.5,<4.0",
    "pynput>=1.7.8,<1.9.0",
    "pygame>=2.5.1,<2.7.0",
    "wandb>=0.26.0",
    "draccus==0.10.0",                   # TODO: Relax version constraint
    "rerun-sdk>=0.24.0,<0.27.0",

    # Support dependencies
    "deepdiff>=7.0.1,<9.0.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "termcolor>=2.4.0,<4.0.0",

    # Xense fork: spdlog is used by our robot_utils.get_logger() (always available)
    "spdlog",
]

# Optional dependencies
[project.optional-dependencies]

# Common
pygame-dep = ["pygame>=2.5.1,<2.7.0"]
keyboard-dep = ["pynput>=1.7.8,<1.9.0"]
can-dep = ["python-can>=4.2.0,<5.0.0"]
scipy-dep = ["scipy>=1.14.0,<2.0.0"]

# Xense SDK (tactile sensors + grippers). SDK 2.0 ships as a compiled wheel and
# is the only supported line; the SDK1 source submodule under third_party is no
# longer used at runtime.
xense = ["xensesdk>=2.0.0"]

# Xense fork: hardware drivers not on PyPI (installed from local wheels or source)
# List them here so tooling can document the requirements.
hardware = [
    # Flexiv RT SDK (Real-Time): required for flexiv_rizon4_rt and bi_flexiv_rizon4_rt
    # Install from internal Flexiv RT SDK wheel
    "flexiv-rt",
    # VR Tracker: required for vive_tracker teleoperator
    "pysurvive",
    # 3D SpaceMouse: required for spacemouse teleoperator
    "pyspacemouse",
]
matplotlib-dep = ["matplotlib>=3.10.3,<4.0.0", "contourpy>=1.3.0,<2.0.0"]

# Motors
feetech = ["feetech-servo-sdk>=1.0.0,<2.0.0"]
dynamixel = ["dynamixel-sdk>=3.7.31,<3.9.0"]
damiao = ["lerobot[can-dep]"]
robstride = ["lerobot[can-dep]"]

# Robots
openarms = ["lerobot[damiao]"]
gamepad = ["lerobot[pygame-dep]", "hidapi>=0.14.0,<0.15.0"]
hopejr = ["lerobot[feetech]", "lerobot[pygame-dep]"]
lekiwi = ["lerobot[feetech]", "pyzmq>=26.2.1,<28.0.0"]
unitree_g1 = [
    # "unitree-sdk2==1.0.1",
    "pyzmq>=26.2.1,<28.0.0",
    "onnxruntime>=1.16.0,<2.0.0",
    "onnx>=1.16.0,<2.0.0",
    "meshcat>=0.3.0,<0.4.0",
    "lerobot[matplotlib-dep]",
    "lerobot[pygame-dep]",
]
reachy2 = ["reachy2_sdk>=1.0.15,<1.1.0"]
# Xense fork: ARX5 robot arm pip-installable dependencies.
# Conda-only deps (install via conda activate lerobot-xense-py312):
#   conda install -c conda-forge spdlog==1.14.1 pybind11 orocos-kdl eigen boost ninja
#   conda install -c conda-forge soem=1.4.0  # x86_64 only
#   conda install -c robostack-staging ros-humble-kdl-parser ros-humble-ament-cmake
# Then build ARX5 Python bindings from source (third_party/ARX5_SDK/).
arx5 = ["pyarx", "click", "pyzmq>=26.2.1,<28.0.0", "atomics"]
intelrealsense = [
    "pyrealsense2>=2.55.1.6486,<2.57.0 ; sys_platform != 'darwin'",
    "pyrealsense2-macosx>=2.54,<2.57.0 ; sys_platform == 'darwin'",
]
phone = [
    "hebi-py>=2.8.0,<2.12.0",
    "teleop>=0.1.0,<0.2.0",
    "fastapi<1.0",
    "lerobot[scipy-dep]",
]

# Development
dev = ["pre-commit>=3.7.0,<5.0.0", "debugpy>=1.8.1,<1.9.0", "mypy>=1.19.1"]
test = [
    "pytest>=8.1.0,<9.0.0",
    "pytest-timeout>=2.4.0,<3.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "mock-serial>=0.0.1,<0.1.0 ; sys_platform != 'win32'",
]
video_benchmark = ["scikit-image>=0.23.2,<0.26.0", "pandas>=2.2.2,<2.4.0"]

# All hardware extras
all = [
    "lerobot[xense]",
    "lerobot[hardware]",
    "lerobot[dynamixel]",
    "lerobot[feetech]",
    "lerobot[damiao]",
    "lerobot[robstride]",
    "lerobot[arx5]",
    "lerobot[openarms]",
    "lerobot[gamepad]",
    "lerobot[hopejr]",
    "lerobot[lekiwi]",
    "lerobot[reachy2]",
    "lerobot[intelrealsense]",
    "lerobot[phone]",
    "lerobot[dev]",
    "lerobot[test]",
    "lerobot[video_benchmark]",
    # "lerobot[unitree_g1]", TODO: Unitree requires specific installation instructions for unitree_sdk2
]

[project.scripts]
lerobot-calibrate = "lerobot.scripts.lerobot_calibrate:main"
lerobot-find-cameras = "lerobot.scripts.lerobot_find_cameras:main"
lerobot-find-port = "lerobot.scripts.lerobot_find_port:main"
lerobot-record = "lerobot.scripts.lerobot_record:main"
lerobot-replay = "lerobot.scripts.lerobot_replay:main"
lerobot-setup-motors = "lerobot.scripts.lerobot_setup_motors:main"
lerobot-teleoperate = "lerobot.scripts.lerobot_teleoperate:main"
lerobot-dataset-viz = "lerobot.scripts.lerobot_dataset_viz:main"
lerobot-info = "lerobot.scripts.lerobot_info:main"
lerobot-imgtransform-viz = "lerobot.scripts.lerobot_imgtransform_viz:main"
lerobot-edit-dataset = "lerobot.scripts.lerobot_edit_dataset:main"
lerobot-setup-can = "lerobot.scripts.lerobot_setup_can:main"
lerobot-annotate-reward = "lerobot.scripts.lerobot_annotate_reward:main"

# ---------------- Tool Configurations ----------------
[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 120
exclude = ["tests/artifacts/**/*.safetensors", "*_pb2.py", "*_pb2_grpc.py"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "T20", "N", "UP", "SIM"]
ignore = [
    "E501", # Line too long
    "T201", # Print statement found
    "T203", # Pprint statement found
    "B008", # Perform function call in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["lerobot"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true

[tool.bandit]
exclude_dirs = [
    "tests",
    "benchmarks",
    "src/lerobot/datasets/push_dataset_to_hub",
]
skips = ["B101", "B311", "B404", "B603", "B615"]

[tool.typos]
default.extend-ignore-re = [
    "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",
    "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on",
]
default.extend-ignore-identifiers-re = [
    "2nd",
    "pn",
    "ser",
    "ein",
    "thw",
    "inpt",
    "ROBOTIS",
    "OT_VALUE",
]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "lerobot.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "lerobot.configs.*"
ignore_errors = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "lerobot.cameras.*"
ignore_errors = false

[[tool.mypy.overrides]]
module = "lerobot.motors.*"
ignore_errors = false
