[build-system]
requires = ["setuptools", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "pyarx"
version = "0.1.0"
description = "Python bindings for the ARX5 robot arm SDK"
requires-python = ">=3.10"
dependencies = ["pybind11", "numpy"]

[tool.setuptools.packages.find]
where = ["."]
include = ["pyarx*"]

[tool.setuptools.package-data]
pyarx = ["*.so", "*.pyd", "*.pyi"]
